<resources>
    <string name="app_name">BabyBuy</string>
    <string name="version_name">BabyBuy v0.1.0-beta01</string>
    <string name="version_full_name">BabyBuy v0.1.0-beta01(01022023)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="choose_display_name">Choose Display Name</string>
    <string name="create_account_summary">Kindly provide the few details below and we will setup your account for you</string>
    <string name="location">Location</string>
    <string name="enter_nin">Enter NIN</string>
    <string name="choose_password">Choose Password</string>
    <string name="hint_location">e.g Lagos</string>
    <string name="hint_password">********</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_hint">e.g name@example.com</string>
    <string name="name_hint">e.g Samson Achiaga</string>
    <string name="login_summary">Welcome back, provide your details to login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="status_check">Status Check</string>
    <string name="me">Me</string>
    <string name="bottom_navigation_view">Bottom Navigation View</string>
    <string name="and">and</string>
    <string name="back_button">Back button</string>
    <string name="or">OR</string>
    <string name="read_about_our">Read about our</string>
    <string name="password_requirement">Password must be at least 8 characters\nand have at least a:\n Uppercase letter e.g A\n Special character e.g @\n Number e.g 1</string>
    <string name="notifications">Notifications</string>
    <string name="attachment_button">Attachment Button</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="protect_yourself">Protect yourself:</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="password_recovery_summary">Hi there, Kindly enter your email to reset your password</string>
    <string name="hey">Hey 👋,</string>
    <string name="drawer_button">Drawer button</string>
    <string name="search_button">Search button</string>
    <string name="notification_button">Notification button</string>
    <string name="categories">Categories</string>
    <string name="add_button">Add button</string>
    <string name="progress">Progress</string>
    <string name="recently_added">Recently Added</string>
    <string name="save">Save</string>
    <string name="notification">Notification</string>
    <string name="onboarding_summary">Create a comprehensive list of items your baby will need on-the-go.</string>
</resources>