<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.OnboardingFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView28"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView28"
        app:layout_constraintStart_toStartOf="@+id/materialTextView28"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_onboarding" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="Create a comprehensive list of items your baby will need on-the-go."
        android:textColor="@color/background"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryContainer"
        android:fontFamily="@font/space_grotesk_medium"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/onPrimaryContainer"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/materialTextView28"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView28" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16ssp"
        android:backgroundTint="@color/onBackground"
        android:fontFamily="@font/space_grotesk_medium"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_terms"
        app:layout_constraintEnd_toEndOf="@+id/btn_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:alpha=".7"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/read_about_our"
        android:textColor="@color/background"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_terms"
        app:layout_constraintEnd_toStartOf="@+id/btn_terms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_terms" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_terms"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/space_grotesk_semi_bold"
        android:minWidth="0dp"
        android:padding="0dp"
        android:text="@string/terms"
        android:textColor="@color/background"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialTextView2"
        app:layout_constraintStart_toEndOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/and"
        android:textColor="@color/background"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_terms"
        app:layout_constraintEnd_toStartOf="@+id/btn_privacy_policy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_terms"
        app:layout_constraintTop_toTopOf="@+id/btn_terms" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_privacy_policy"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/space_grotesk_semi_bold"
        android:padding="0dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/background"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toTopOf="@+id/btn_terms" />

</androidx.constraintlayout.widget.ConstraintLayout>