<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginFragment">

    <data>

        <!--        <import type="androidx.databinding.ObservableField" />-->

        <!--        <import type="com.certified.covid19response.util.UIState" />-->

        <!--        <variable-->
        <!--            name="uiState"-->
        <!--            type="ObservableField&lt;UIState>" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_16sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:text="@string/login"
                    android:textColor="@color/onSurface"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/space_grotesk_regular"
                    android:text="@string/login_summary"
                    android:textColor="@color/onSurface"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/space_grotesk_medium"
                    android:text="@string/email_address"
                    android:textColor="@color/onSurface"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/secondaryContainer"
                    app:boxCornerRadiusBottomEnd="@dimen/_6sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_6sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_6sdp"
                    app:boxCornerRadiusTopStart="@dimen/_6sdp"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeWidth=".2dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView11"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView11">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/space_grotesk_regular"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:textColor="@color/onSurface" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/space_grotesk_medium"
                    android:text="@string/password"
                    android:textColor="@color/onSurface"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                    app:layout_constraintTop_toBottomOf="@+id/et_email_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/secondaryContainer"
                    app:boxCornerRadiusBottomEnd="@dimen/_6sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_6sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_6sdp"
                    app:boxCornerRadiusTopStart="@dimen/_6sdp"
                    app:boxStrokeColor="@color/primary"
                    app:boxStrokeWidth=".2dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView8"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView8"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/onSurface">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/space_grotesk_regular"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:textColor="@color/onSurface" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forgot_button"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:backgroundTint="@color/primary"
                    android:fontFamily="@font/space_grotesk_medium"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/onPrimary"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                    app:layout_constraintStart_toStartOf="@+id/et_password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/btn_forgot_button" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:alpha=".7"
                    android:fontFamily="@font/space_grotesk_regular"
                    android:text="@string/or"
                    android:textColor="@color/onSurface"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="@+id/btn_login"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signup"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/space_grotesk_medium"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                    app:layout_constraintStart_toStartOf="@+id/et_password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView10"
                    app:strokeColor="@color/primary"
                    app:strokeWidth=".5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>